--- a/README.org
+++ b/README.org
@@ -1,29 +1,19 @@
-# 
-
-## 配置文件位置
+* 配置文件位置
 - `~/.emacs.d`
-### 克隆到本地
-``` shell
-git clone git@github.com:sigma2647/emacs.d.git  ~/.emacs.d
-```
-### font
-#### all-the-icons
+* 克隆到本地
+#+begin_src shell
+  git clone git@github.com:sigma2647/emacs.d.git  ~/.emacs.d
+#+end_src
+* font
+* all-the-icons
 - `M-x all-the-icons-install-fonts`
 
 
-
-
-
-
-
-
-
-
-## todo
+* todo
 - 添加清华源
 - 文件树
 
-## expample config
+* expample config
 - [cabins/emacs.d](https://github.com/cabins/emacs.d)
 
 - [cabins/.emacs.d](https://github.com/cabins/.emacs.d)
@@ -31,9 +21,8 @@ git clone git@github.com:sigma2647/emacs.d.git  ~/.emacs.d
 - 3k starts [redguardtoo/emacs.d](https://github.com/redguardtoo/emacs.d)
 
 
-
-## 插件
+* 插件
 - [melpa](https://melpa.org/#/)
 
-## 字体
+* 字体
 Iosevka SS04
