--- a/README.org
+++ b/README.org
@@ -156,6 +156,7 @@ Iosevka SS04
 
 * Tips
 [[https://www.emacswiki.org/emacs/%e7%b6%b2%e7%ab%99%e5%9c%b0%e5%9c%96][emacswiki]]
+M-x align-regex
 
 * 文件结构
 .demacs.d
