--- a/README.org
+++ b/README.org
@@ -1,4 +1,3 @@
-
 * TODO
 - [ ] 历史命令
 - [ ] lsp
@@ -17,7 +16,8 @@
 - [X] indent line
 - [X] install org-babel-execute
 - [X] last positon
-- 
+- [ ] hydra
+  
 
 ** packages
 [[https://github.com/rougier/org-outer-indent][rougier/org-outer-indent]]
@@ -161,11 +161,11 @@ M-x align-regex
 * 文件结构
 .demacs.d
 ├── lisp
+│   ├──[[~/.emacs.d/lisp/init-options.el][init-options.el]]
 │   ├──[[~/.emacs.d/lisp/core-keymap.el][core-keymap.el]]
 │   ├──[[~/.emacs.d/lisp/init-elpa.el][init-elpa.el]]
 │   ├──[[~/.emacs.d/lisp/init-evil.el][init-evil.el]]
 │   ├──[[~/.emacs.d/lisp/init-function.el][init-function.el]]
-│   ├──[[~/.emacs.d/lisp/init-options.el][init-options.el]]
 │   ├──[[~/.emacs.d/lisp/init-packages.el][init-packages.el]]
 │   ├──[[~/.emacs.d/lisp/init-startup.el][init-startup.el]]
 │   ├──[[~/.emacs.d/lisp/init-system.el][init-system.el]]
