--- a/README.org
+++ b/README.org
@@ -31,13 +31,19 @@
 - `~/.emacs.d`
  
 * 克隆到本地
-#+begin_src shell
+#+begin_src bash
   git clone git@github.com:sigma2647/emacs.d.git  ~/.emacs.d
 #+end_src
 * font
+| Mode | Font                      |
+|------+---------------------------|
+| Org  | Maple Mono                |
+| Code | MesloLGSDZ Nerd Font Mono |
+|      |                           |
+
 ** all-the-icons
 - `M-x all-the-icons-install-fonts`
-  
+- TODO)
 * TODO todo
 ** DONE 添加清华源
 2) 文件树
