--- a/README.org
+++ b/README.org
@@ -1,4 +1,8 @@
 #+TITLE: HELLO
+* Install
+#+begin_src shell
+  git clone git@github.com:sigma2647/emacs.d ~/.emacs.d
+#+end_src
 * TODO
 centaur-logo
 #+begin_src emacs-lisp
